--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -28,7 +28,7 @@ jobs:
         uses: docker/build-push-action@master
         with:
           context: qinglong
-          platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64
+          platforms: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x
           push: true
           tags: summary/qinglong:latest
 
@@ -40,37 +40,13 @@ jobs:
           push: true
           tags: summary/jd:helloworld
 
-      - name: Push 6053537-amd64 to Dockerhub
+      - name: Push portainer-ce to Dockerhub
         uses: docker/build-push-action@master
         with:
-          context: portainer-ce/6053537-amd64
-          platforms: linux/amd64
+          context: portainer-ce
+          platforms: linux/amd64,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x
           push: true
-          tags: summary/portainer-ce:amd64
-
-      - name: Push 6053537-arm64 to Dockerhub
-        uses: docker/build-push-action@master
-        with:
-          context: portainer-ce/6053537-arm64
-          platforms: linux/amd64
-          push: true
-          tags: summary/portainer-ce:arm64
-
-      - name: Push 6053537-armv7 to Dockerhub
-        uses: docker/build-push-action@master
-        with:
-          context: portainer-ce/6053537-armv7
-          platforms: linux/amd64
-          push: true
-          tags: summary/portainer-ce:armv7
-
-      - name: Push 6053537-ppc64le to Dockerhub
-        uses: docker/build-push-action@master
-        with:
-          context: portainer-ce/6053537-ppc64le
-          platforms: linux/amd64
-          push: true
-          tags: summary/portainer-ce:ppc64le
+          tags: summary/portainer-ce:latest
 
       - name: Delete older Workflows
         uses: GitRML/delete-workflow-runs@main
