--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -46,7 +46,15 @@ jobs:
           context: portainer-ce
           platforms: linux/amd64,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x
           push: true
-          tags: summary/portainer-ce:2.19.0
+          tags: summary/portainer-ce:2.19.1
+
+      - name: Push portainer-ce to Dockerhub
+        uses: docker/build-push-action@master
+        with:
+          context: portainer-ce
+          platforms: linux/amd64,linux/arm/v7,linux/arm64,linux/ppc64le,linux/s390x
+          push: true
+          tags: summary/portainer-ce:latest
 
       - name: Delete older Workflows
         uses: GitRML/delete-workflow-runs@main
