--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -2,8 +2,11 @@ name: Build Docker
 
 on:
   workflow_dispatch:
+  push:
+    paths:
+      - .github/workflows/docker.yml
   schedule:
-    - cron: '0 15 */3 * *'
+    - cron: 0 15 */3 * *
 
 jobs:
   docker:
