--- a/.github/workflows/x86_64-mini-openwrt.yml
+++ b/.github/workflows/x86_64-mini-openwrt.yml
@@ -108,7 +108,7 @@ jobs:
         echo "DATE=$(date +"%Y-%m-%d %H:%M:%S")" >> $GITHUB_ENV
 
     - name: Check Space Usage
-      if: always()
+      if: (!cancelled())
       run: df -hT
 
     - name: Organize Files
