--- a/.github/workflows/docker-image-sync.yml
+++ b/.github/workflows/docker-image-sync.yml
@@ -6,7 +6,7 @@ on:
     branches:
       - master
     paths:
-      - .github/workflows/docker.yml
+      - .github/workflows/docker-image-sync.yml
   schedule:
     - cron: 0 15 */3 * *
 
