--- a/configs/x86_64-mini.config
+++ b/configs/x86_64-mini.config
@@ -101,7 +101,7 @@ CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_openssh-sftp-server=y
 CONFIG_PACKAGE_snmpd=y
 CONFIG_PACKAGE_vim-fuller=y
-# CONFIG_PACKAGE_zsh is not set
+CONFIG_PACKAGE_zsh=y
 
 # Ipv6 Support
 CONFIG_PACKAGE_6in4=y
