--- a/.github/workflows/x86_64-mini-openwrt.yml
+++ b/.github/workflows/x86_64-mini-openwrt.yml
@@ -35,7 +35,7 @@ jobs:
         echo -e "已知CPU型号(降序): 7763，8370C，8272CL，8171M，E5-2673\n"
         echo "--------------------------CPU信息--------------------------"
         echo "CPU物理数量: $(cat /proc/cpuinfo | grep "physical id" | sort | uniq | wc -l)"
-        echo "CPU核心数量: $(nproc)"
+        echo "CPU线程数量: $(nproc)"
         echo -e "CPU型号信息:$(cat /proc/cpuinfo | grep -m1 name | awk -F: '{print $2}')\n"
         echo "--------------------------内存信息--------------------------"
         echo "已安装内存详细信息:"
